minor change -Implement GET /api/companies: list semua company (internal & partner), untuk dropdown pembuatan trip di frontend
